--- a/tictacmatchleocaseiro.css
+++ b/tictacmatchleocaseiro.css
@@ -92,6 +92,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 1em;
+    min-width: calc(var(--tictacmatchCardHeight) * var(--tictacmatchCardScale) * 3);
 }
 .ttm-hand__cards .card {
 }
